test/error/VisibilityPrivateFieldDerivedPtr.fu
public class Base
{
	bool Priv = true;
	protected static bool Foo(Test t) => t.Priv; //ERROR: Cannot access private member 'Priv'
}

public class Test : Base
{
	public static bool Run()
	{
		return true;
	}
}
